--- a/css/public.css
+++ b/css/public.css
@@ -4,6 +4,14 @@
 	color: #ffffff; 
   	line-height: 44px;
   	text-decoration: none;
+  	font-size: 14px;
+}
+.approval{
+	float: right;
+	font-weight: 500;
+	color: #ffffff; 
+  	line-height: 44px;
+  	text-decoration: none;
 }
 .head-right-btn{
 	float: right;
@@ -13,7 +21,7 @@
   	text-decoration: none;
 }
 .headerText{
-	font-size: 13px;
+	font-size: 14px;
   	font-weight: 500;
   	color: #ffffff;
   	line-height: 44px;
@@ -44,5 +52,5 @@
 }
 #titleContainer{
 	text-align: center;
-	font-size:16px;
+	/*font-size:16px;*/
 }
